# silver-brain

./: .gitignore  .gitmodules  CHANGELOG.org  Cargo.toml  LICENSE  README.md  README.org  bootstrap.sh  build.sbt  build.sc  install.sh  mix.exs  silver-brain.asd
app/swagger/: openapi.yaml
apps/silver_brain_core/: .gitignore  README.md  mix.exs
apps/silver_brain_migrator/: .gitignore  README.md  mix.exs
apps/silver_brain_server/: .gitignore  README.md  mix.exs
apps/silver_brain_service/: README.md  mix.exs
backend/: .gitignore  concept.lisp  main.lisp  silver-brain-tests.asd  silver-brain.asd  silver-brain.sqlite
backend/doc/: api.org
backend/roswell/: silver-brain.ros
backend/src/: concept-map.lisp  config.lisp  db.lisp  main.lisp  package.lisp  packages.lisp  server-util.lisp  server.lisp
backend/tests/: concept-map.lisp  db.lisp  main.lisp  package.lisp  packages.lisp  server.lisp
config/: config.exs
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: domain.rs  lib.rs  search.rs
crates/core/src/domain/: attachment.rs  common.rs  context.rs  entry.rs  entry_service.rs  graph.rs  link.rs  mod.rs  types.rs
crates/core/src/search/: expr.rs  mod.rs  parser.rs  query.rs
crates/core/src/service/: common.rs  entry.rs  entry_service.rs  error.rs  mod.rs  result.rs  sql_entry_service.rs  sqlite_entry_service.rs  store.rs
crates/core/src/store/: mod.rs  sql_store.rs  sqlite_store.rs  store.rs  tests.rs
crates/core/src/store/entity/: entry.rs  link.rs
crates/core/src/store/repo/: entry.rs
crates/dev/: Cargo.toml
crates/dev/src/: lib.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: error.rs  lib.rs  main.rs  route.rs  server.rs  state.rs
crates/migration/: Cargo.toml
crates/server/: Cargo.toml
crates/sql-service/: Cargo.toml
data/: default.sqlite
dev/: repl.scala
docs/: dev.md  dev.org
emacs/: silver-brain-api.el  silver-brain-autoloads.el  silver-brain-buffer.el  silver-brain-common.el  silver-brain-concept.el  silver-brain-core.el  silver-brain-dev.el  silver-brain-hello.el  silver-brain-list.el  silver-brain-pkg.el  silver-brain-search.el  silver-brain-util.el  silver-brain-vars.el  silver-brain.el
lib/concept-map/: concept-map.lisp  model.lisp  package.lisp  search.lisp  silver-brain.concept-map.asd
lib/global/: conditions.lisp  config.lisp  json.lisp  package.lisp  runtime-settings.lisp  silver-brain.global.asd
lib/server/: middlewares.lisp  package.lisp  routes.lisp  server-dev.lisp  silver-brain.server.asd
lib/store/: package.lisp  silver-brain.store.asd  store.lisp
libs/http_server/: io-extension.scala  server.scala
mitogrator/: README.org  mitogrator.asd  packages.lisp
mitogrator/src/: mitogrator.lisp  package.lisp
mitogrator/test/: mitogrator.lisp  package.lisp  util.lisp
project/: plugins.sbt
resources/migrations/: V2__Create_tables.sql
server/: .gitignore  ChangeLog.md  README.md  SilverBrain.fsproj  SilverBrain.sln  build.sbt  build.sc  config.toml  mix.exs  package.yaml  paket.dependencies  paket.references  silver-brain.asd  silver-brain.cabal  stack.yaml
server/app/: Main.hs
server/config/: config.exs
server/lib/: silver_brain.ex
server/priv/: config.toml
server/project/: plugins.sbt  scalikejdbc.properties
server/roswell/: silver-brain.ros
server/src/: Core.fs  Lib.hs  Program.fs  SilverBrain.fsproj  Util.fs  config.lisp  globals.lisp  package.lisp  packages.lisp  silver-brain.lisp  util.lisp  web.lisp
server/test/: ConceptMap.fs  SilverBrain.Tests.fsproj  Test.fs  TestUtil.fs  http_client.ex  package.lisp  paket.references  silver_brain_test.exs
server/tests/: integration.lisp  silver-brain.lisp  suite.lisp  web.lisp
server/tools/: fsi.fs
src/: concept-map.lisp  concept.lisp  main.lisp  main.rs  main.scala  migrate.scala  node-map.lisp  node.lisp  server.lisp
src/core/: core.scala  item.scala
src/domain/: types.rs
src/emacs/: silver-brain-api.el  silver-brain-common.el  silver-brain-list.el
src/http/: common.scala  io-extension.scala  routes.scala  server.scala
src/server/: .gitignore  Cargo.toml  SilverBrain.sln  paket.dependencies
src/server/.config/: dotnet-tools.json
src/server/dev/: Core.fs  Program.fs  SilverBrain.fsproj  TestData.fs  paket.references
src/server/dev/Cli/: Dev.fs
src/server/dev/ConceptMap/: ConceptMap.fs  Repo.fs  SearchEngine.fs  SearchParser.fs  Types.fs
src/server/dev/Domain/: ConceptMap.fs
src/server/dev/Domain/ConceptMap/: ConceptMap.fs  SearchEngine.fs  SearchParser.fs
src/server/dev/DomainType/: ConceptMap.fs
src/server/dev/Server/: Common.fs  ConceptMapRoute.fs  Server.fs
src/server/dev/Store/: ConceptMapRepo.fs  Migration.fs  Store.fs  TestData.fs
src/server/dev/Store/Scripts/Migration/: 02.00.00_InitializeV2Schema.sql
src/server/src/: SilverBrain.fsproj  lib.rs  main.rs  server.rs
src/server/src/Cli/: Server.fs
src/server/src/Store/: Migration.fs
src/server/src/Store/Scripts/TestData/: 3_.txt
src/server/test/: ConceptMap.fs  SilverBrain.Tests.fsproj  TestUtil.fs  paket.references
src/server/test/ConceptMap/: ConceptMap.fs  SearchParser.fs
src/server/tools/: fsi.fs
src/sql/: item.scala  store.scala
src/swagger/: openapi.yaml
src/web-ui/: package-lock.json  package.json
tests/: concept-map.lisp  concept.lisp  node.lisp  server.lisp  util.lisp
web-ui/: .eslintrc.js  README.md  index.html  package-lock.json  package.json
(+350 files in other folders)
