[package]
name = "silver-brain"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
  "crates/cli",
  "crates/core",
  "crates/server",
]

[workspace.dependencies]
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
time = { version = "0.3", features = ["macros", "std", "parsing", "formatting", "serde"] }

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
silver-brain-cli = { path = "crates/cli" }
silver-brain-server = { path = "crates/server" }
tokio = { version = "1", features = ["full"] }
