[package]
name = "silver-brain"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
  "crates/cli",
  "crates/core",
  "crates/server",
]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
ksuid = "0.2.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
time = { version = "0.3", features = ["macros", "std", "parsing", "formatting", "serde"] }
typed-builder = "0.16.0"

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
silver-brain-cli = { path = "crates/cli" }
silver-brain-server = { path = "crates/server" }
tokio = { version = "1", features = ["full"] }
