[package]
name = "silver-brain"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
  "crates/core",
  "crates/migration",
  "crates/sql-service",
  "crates/dev",
  "crates/http-server",
  "crates/cli",
]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.3.24", features = ["derive"] }
lazy_static = "1.4.0"
sea-orm = { version = "0.12.2", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-time", "debug-print"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
svix-ksuid = "0.7.0"
thiserror = "1.0.47"
time = { version = "0.3", features = ["macros", "std", "parsing", "formatting", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
typed-builder = "0.16.0"

[dependencies]
silver-brain-cli = { path = "crates/cli" }
silver-brain-dev = { path = "crates/dev" }
silver-brain-http-server = { path = "crates/http-server" }
tokio = { workspace = true }
