[package]
name = "silver-brain-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
anyhow = { workspace = true }
async-trait = { workspace = true }
sea-orm = { version = "0.12.2", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-time"] }
thiserror = { workspace = true }
time = { workspace = true }
typed-builder = { workspace = true }
