[package]
name = "silver-brain-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
sea-orm = { workspace = true }
svix-ksuid = { workspace = true }

silver-brain-core = { path = "../core" }
