[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20" }
clap = { version = "4.3.24", features = ["derive"] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
time = { version = "0.3", features = ["macros", "std"] }
tokio = { version = "1", features = ["full"] }
